RC 4
====

- Added eval support to configuration. Currently it only supports 
  BaseDirectory as a content to evaluate

  <?eval $BaseDirectory ?>

- Added IEnvironmentInfo in an attempt to solve complex 
  configuration/environment issues.

- Fixing IOC-63 - source order of constructors should not matter

- Fixed IOC-62
  "Interceptors don't work properly on generic components"

- Applied Norbert Wagner's patch fixing IOC-55
  "Generic Type Converters: Set default entry types to generic arguments of property type"

- Applied Jeff Brown's patch fixing IOC-54
  "Empty component parameter values cause runtime exception during component resolution."

- Applied patch by Bill Pierce that

-- Introduces the WebUserControlComponentActivator

-- Introduces the KeySearchNamingSubSystem

-- Allows you to associate a custom component activator using
    1. componentActivatorType on component node
    2. ComponentActivatorAttribute

-- Allows you to create and configure child containers 
   through the configuration, using

  <configuration>
    <containers>
        <container name="child1">
          <configuration>
                <facilities>
					...
                </facilities>
          
                <components>
					...
                </components>
                
            </configuration>
        </container>
    </containers>
  </configuration>

- Applied AndyD's patch fixing IOC-52
  "Remote access to generic components"

- Fixed IOC-45
  "Proxying a component that has an interface that is extended from another interface throws an exception"

- Applied patch by Ernst Naezer fixing IOC-37
  "Resolving with arguments in Windsor"

- Fixed IOC-43 
  "Creation of an Attribute in the Kernel that allows one property to be ignored by the dependency builder"
  
  Introduced DoNotWireAttribute that marks a property and prevents it
  from being considered by the container

- Changed Windsor to use DynamicProxy 2

- Applied patch by Adam Mills fixing IOC-42