@@ -118,6 +118,7 @@ namespace Castle.MicroKernel.ModelBuilder
 			AddContributor(new ConfigurationParametersInspector());
 			AddContributor(new InterceptorInspector());
 			AddContributor(new ComponentActivatorInspector());
+			AddContributor(new ComponentProxyInspector());
 		}
 	}
 }
