@@ -1,0 +1,33 @@
+<configuration>
+
+	<components>
+
+    <component id="standard.interceptor" 
+      type="Castle.Core.Interceptor.StandardInterceptor, Castle.Core">
+    </component>
+    
+    <component id="default" 
+      type="Castle.Windsor.Tests.Components.CalculatorServiceWithMultipleInterfaces, Castle.Windsor.Tests"
+      service="Castle.Windsor.Tests.Components.ICalcService, Castle.Windsor.Tests">
+    </component>
+    
+		<component id="noSingle" 
+			type="Castle.Windsor.Tests.Components.CalculatorServiceWithMultipleInterfaces, Castle.Windsor.Tests"
+      service="Castle.Windsor.Tests.Components.ICalcService, Castle.Windsor.Tests"
+			useSingleInterfaceProxy="false">
+		</component>
+
+    <component id="useSingle" 
+      type="Castle.Windsor.Tests.Components.CalculatorServiceWithMultipleInterfaces, Castle.Windsor.Tests"
+      service="Castle.Windsor.Tests.Components.ICalcService, Castle.Windsor.Tests"
+      useSingleInterfaceProxy="true">
+    </component>
+
+    <component id="useSingleAttribute" 
+        type="Castle.Windsor.Tests.Components.CalculatorServiceWithSingleProxyBehavior, Castle.Windsor.Tests"
+        service="Castle.Windsor.Tests.Components.ICalcService, Castle.Windsor.Tests">
+    </component>
+
+  </components>
+
+</configuration>
