@@ -1,0 +1,17 @@
+<configuration>
+
+	<components>
+
+    <component id="standard.interceptor" 
+      type="Castle.Core.Interceptor.StandardInterceptor, Castle.Core">
+    </component>
+        
+		<component id="invalidAttrib" 
+			type="Castle.Windsor.Tests.Components.CalculatorServiceWithMultipleInterfaces, Castle.Windsor.Tests"
+      service="Castle.Windsor.Tests.Components.ICalcService, Castle.Windsor.Tests"
+			useSingleInterfaceProxy="Foo">
+		</component>
+    
+	</components>
+
+</configuration>
